<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.money.MoneyDetailActivity">
    <com.google.android.material.appbar.AppBarLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?actionBarSize"
        android:id="@+id/appBar">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.appbar.AppBarLayout>
    <TextView
        android:id="@+id/dateEditText"
        android:background="@color/colorPrimaryLight"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonDateDialog"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        style="@style/edit_text" />

    <ImageButton
        android:id="@+id/imageButtonDateDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/app_margin"
        android:background="@android:color/transparent"
        android:contentDescription="@string/pop_up_date_picker"
        android:src="@drawable/ic_calendar"
        app:layout_constraintBottom_toBottomOf="@+id/dateEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dateEditText" />

    <TextView
        android:id="@+id/textView"
        android:textStyle="bold"
        style="@style/text_label_18sp"
        android:text="@string/ngay"
        app:layout_constraintBaseline_toBaselineOf="@+id/dateEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/dateEditText" />

    <TextView
        android:id="@+id/textView2"
        style="@style/text_label_18sp"
        android:text="@string/ghi_chu"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/noteEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/noteEditText"
        style="@style/edit_text"
        android:inputType="textMultiLine"
        android:hint="@string/add_note"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonDateDialog"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:scrollbars="vertical"
        android:maxLines="1" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noteEditText"/>

    <TextView
        android:id="@+id/textView3"
        style="@style/text_label_18sp"
        android:text="@string/tien_chi"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/moneyEarnEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/moneyEarnEditText"
        style="@style/edit_text"
        android:inputType="numberDecimal"
        android:textStyle="bold"
        android:text="@string/_0"
        android:background="@color/colorPrimaryLight"
        app:layout_constraintTop_toBottomOf="@id/view1"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonDateDialog"
        app:layout_constraintStart_toEndOf="@+id/textView2" />
    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/moneyEarnEditText"/>

    <TextView
        android:id="@+id/cateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginEnd="@dimen/app_margin"
        android:layout_marginTop="30dp"
        android:text="@string/danh_muc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listCategory"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="@dimen/app_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cateLabel"
        tools:itemCount="5"
        tools:listitem="@layout/category_item" />
    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/listCategory"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginEnd="@dimen/app_margin"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_colorprimary_bg"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:text="@string/luu"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />
</androidx.constraintlayout.widget.ConstraintLayout>