<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="viewModel"
            type="vianh.nva.moneymanager.ui.orders.CreatePasswordViewModel" />
    </data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.orders.CreatePasswordActivity">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?actionBarSize">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.appbar.AppBarLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/deleteBg"
            android:layout_marginTop="50dp"
            android:textSize="18sp"
            android:layout_marginStart="@dimen/app_margin"
            android:layout_marginEnd="@dimen/app_margin"
            android:text="@string/warning_text" />

        <EditText
            android:id="@+id/txtPassword"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="25sp"
            android:layout_marginTop="100dp"
            android:padding="5dp"
            android:hint="@string/nhap_mat_khau"
            android:addTextChangedListener="@{viewModel.passwordWatcher}"
            android:text="@={viewModel.password}"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:layout_marginStart="@dimen/app_margin"
            android:layout_marginEnd="@dimen/app_margin"
            android:background="@drawable/border_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/txtPasswordConfirm"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_marginTop="@dimen/app_margin"
            android:textSize="25sp"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:padding="5dp"
            android:text="@={viewModel.passwordConfirm}"
            android:hint="@string/xac_nhan_mat_khau"
            android:addTextChangedListener="@{viewModel.passwordConfirmWatcher}"
            android:layout_marginStart="@dimen/app_margin"
            android:layout_marginEnd="@dimen/app_margin"
            android:background="@drawable/border_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnSave"
            android:layout_marginTop="50dp"
            android:layout_marginStart="@dimen/app_margin"
            android:layout_marginEnd="@dimen/app_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="@{viewModel.isOk}"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="@{() -> viewModel.createPassword()}"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_colorprimary_bg"
            android:text="@string/luu" />
    </LinearLayout>
</layout>