<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.category.CategoryActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?actionBarSize">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_margin"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/ten_danh_muc"
        app:layout_constraintBaseline_toBaselineOf="@+id/categoryName"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/categoryName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:textSize="18sp"
        android:hint="@string/nhap_ten_danh_muc"
        android:background="@android:color/transparent"
        android:inputType="text"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginEnd="@dimen/app_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/appBar" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        android:nestedScrollingEnabled="true"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/app_margin"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bieu_tuong"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/app_margin"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewIcon"
                android:layout_marginStart="@dimen/app_margin"
                android:layout_marginEnd="@dimen/app_margin"
                android:layout_width="match_parent"
                android:layout_height="250dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mau_sac"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/app_margin"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginStart="@dimen/app_margin"
                android:layout_marginEnd="@dimen/app_margin"
                android:id="@+id/recyclerViewColor"
                android:layout_width="match_parent"
                android:layout_height="250dp" />
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/btnSave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/app_margin"
        android:text="@string/luu"
        android:enabled="false"
        android:textAllCaps="false"
        android:layout_marginStart="@dimen/app_margin"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginEnd="@dimen/app_margin"
        android:background="@drawable/btn_colorprimary_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>